--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_AUTHSERVICE_BASE_URL = 'https://whorunswhat.herokuapp.com/api/auth'
+REACT_APP_AUTHSERVICE_BASE_URL = '/api/auth'
 
-REACT_APP_BASE = 'https://whorunswhat.herokuapp.com/api'
+REACT_APP_BASE = '/api'
